# Project_Python_Banking_App

./: .gitignore  pyproject.toml
banker/: bank_acct_gen.py  cust_info.py
