[tool.poetry]
name = "banking-app"
version = "0.1.0"
description = "This is a python version of a banking app."
authors = ["Mustafa Prodhan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
